tests/src/frontend/typechecking/invalid/constraint.sk
trait MyTC
class MyDict<Tid: MyTC>()
base class X<Tid> {
  fun gen(): MyDict<Tid>;
}
